# SlideSmith-MCP

./: LICENSE  README.md  pyproject.toml
src/: __init__.py  server.py
src/converter/: __init__.py  html_to_pptx.py
src/models/: __init__.py  presentation.py
src/tools/: __init__.py  design.py  images.py
